--- a/portainer/Makefile
+++ b/portainer/Makefile
@@ -5,5 +5,5 @@ rsync:
 	rsync -azv . $(server):$(project_path)
 
 deploy: rsync
-	ssh $(server) "cd $(project_path) && docker compose up -d"
+	ssh $(server) "cd $(project_path) && docker compose down && docker compose up -d"
 
