--- a/app-sample/docker-compose.yml
+++ b/app-sample/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   app-sample:
     build: .
-    container_name: app-sample
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
+      - DEPLOYMENT=${DEPLOYMENT}
     networks:
       - traefik
     labels:
@@ -12,6 +12,11 @@ services:
       traefik.http.routers.app-sample.entrypoints: "websecure"
       traefik.http.routers.app-sample.tls.certresolver: "myresolver"
       traefik.http.services.app-sample.loadbalancer.server.port: "3000"
+
+      traefik.http.services.app-sample.loadbalancer.healthcheck.path: "/healthcheck"
+      traefik.http.services.app-sample.loadbalancer.healthcheck.port: "3000"
+      traefik.http.services.app-sample.loadbalancer.healthcheck.interval: "3s"
+
 
 networks:
   traefik:
