--- a/app-sample/docker-compose.yml
+++ b/app-sample/docker-compose.yml
@@ -13,9 +13,15 @@ services:
       traefik.http.routers.app-sample.tls.certresolver: "myresolver"
       traefik.http.services.app-sample.loadbalancer.server.port: "3000"
 
+
       traefik.http.services.app-sample.loadbalancer.healthcheck.path: "/healthcheck"
       traefik.http.services.app-sample.loadbalancer.healthcheck.port: "3000"
-      traefik.http.services.app-sample.loadbalancer.healthcheck.interval: "3s"
+      traefik.http.services.app-sample.loadbalancer.healthcheck.interval: "10s" # Frequência das verificações
+      traefik.http.services.app-sample.loadbalancer.healthcheck.timeout: "3s"  # Tempo limite para considerar a resposta
+
+      traefik.http.middlewares.app-sample-retry.retry.attempts: "3"
+      traefik.http.middlewares.app-sample-retry.retry.initialinterval: "500ms"
+      traefik.http.routers.app-sample.middlewares: "app-sample-retry"
 
 
 networks:
