Add deployment scripts and configuration for blue-green deployment, update Makefile, and enhance UI with new styles and button functionality.

--- a/app-sample/Makefile
+++ b/app-sample/Makefile
@@ -1,8 +1,8 @@
-server = ec2-user@bluegreen.duckdns.org
+server = ec2-user@devpira.brorlandi.xyz
 project_path = $(shell basename $(shell pwd))
 
 rsync:
-	rsync -azv . $(server):$(project_path)
+	rsync -azv . $(server):$(project_path) --exclude .git --exclude-from .gitignore
 
 deploy: rsync
 	ssh $(server) "cd $(project_path) && docker compose down && docker compose up -d --build"
@@ -11,5 +11,5 @@ deploy-bg: rsync
 	ssh $(server) "cd $(project_path) && sh ./deploy.sh"
 
 down:
-	ssh $(server) "cd $(project_path) && docker compose down"
+	ssh $(server) "cd $(project_path) && docker compose --project-name=app-sample-blue down && docker compose --project-name=app-sample-green down"
 
