Update Docker and Makefile configurations to use new domain and email, and ensure services restart automatically.

--- a/portainer/Makefile
+++ b/portainer/Makefile
@@ -1,4 +1,4 @@
-server = ec2-user@bluegreen.duckdns.org
+server = ec2-user@devpira.brorlandi.xyz
 project_path = $(shell basename $(shell pwd))
 
 rsync:
